Add automake and autoconf for portable builds.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,22 @@
-/configuration.o
-/engine.o
-/fileutils.o
-/ias.o
-/init.o
-/net.o
-/pkcs7.o
-/sceputils.o
+autom4te.cache
+autoscan.log
+config.log
+config.h
+Makefile
+.project
+.cproject
+*.slo
+*.o
+*~
+*.tar.bz2
+*.tar.gz
+config.status
+.deps
+stamp-h1
+sscep
+sscep.spec
+Makefile
 /sscep
 /sscep_static
 /sscep_dyn
-/sscep.o
 /.git_checkout
